# langchain_milvus_rag

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  embedEtcd.yaml  main.py  pyproject.toml  test.py  user.yaml
src/: __init__.py  config.py
src/embeddings/: __init__.py  jina_embedding.py
src/loaders/: __init__.py  document_loader.py
src/pipeline/: __init__.py  rag_pipeline.py
src/rag/: __init__.py  chain.py
src/vector_store/: __init__.py  milvus_store.py
