[project]
name = "milvus"
version = "0.1.0"
description = "Milvus RAG system with LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-milvus>=0.1.0",
    "pymilvus>=2.4.0",
    "openai>=1.0.0",
    "tqdm>=4.66.0",
    "langchain-deepseek>=1.0.0",
]
